--- a/web-aitistlab/package.json
+++ b/web-aitistlab/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.15",
+    "axios": "^1.3.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
